drsstc_interrupter: undefine version, define arduino_dir

--- a/drsstc_interrupter/Makefile
+++ b/drsstc_interrupter/Makefile
@@ -1,5 +1,5 @@
 BOARD_TAG = uno
 ARCHITECTURE = avr
-ARDUINO_VERSION = 185
+ARDUINO_DIR = /usr/lib64/arduino
 
 include ../Arduino-Makefile/Arduino.mk
