makefile: pass in version

--- a/drsstc_interrupter/Makefile
+++ b/drsstc_interrupter/Makefile
@@ -2,4 +2,7 @@ BOARD_TAG = uno
 ARCHITECTURE = avr
 ARDUINO_DIR = /usr/lib64/arduino
 
+VERSION=\"$(shell git describe)\"
+CXXFLAGS=-DVERSION=$(VERSION)
+
 include ../Arduino-Makefile/Arduino.mk
